--- a/elen-master/fashion.html
+++ b/elen-master/fashion.html
@@ -61,31 +61,30 @@
 						<!-- Wrap pairs of images in a new div with class "row" -->
 						<div class="row no-gutters">
 							<div class="col-md-6">
-								<a href="https://www.figma.com/design/yygDL2JAQB0EBfaECCXsba/VrituTrust?node-id=0-1&t=sDQxDLDYSGpgJE6J-1" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/post4.jpg); width: 600px; height: 300px; " target="_blank">
+								<a href="https://github.com/Ruma1013/AutoHunt" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/post7.jpg); width: 600px; height: 300px; " target="_blank">
 									<div class="overlay"></div>
 									<div class="text text-center">
-										<h3>VTrust Interview App</h3>
-										<span>Used Technologies : Figma</span>
+										<h3>Auto Hunt Car Sale Web Application</h3>
+										<span>Used Technologies : <br> React, Node JS, Express JS, MongoDB </span>
 									</div>
 
 								</a>
 							</div>
 							<div class="col-md-6">
-								<a href="https://www.figma.com/proto/wcG1eL7ZhUkpWnBGQU2HsV/PearlHack-Round01?page-id=0%3A1&node-id=393-1888&scaling=scale-down&t=C5n4Aza015g1DKn5-1
-								" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/post6.png); width: 600px; height: 300px;" target="_blank">
+								<a href="https://github.com/Ruma1013/Capstone" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/post3.jpg); width: 600px; height: 300px;" target="_blank">
 									<div class="overlay"></div>
 									<div class="text text-center">
-										<h3>Flood Detection App</h3>
-										<span>Used Technologies : Figma</span>
+										<h3>Smart License App</h3>
+										<span>Used Technologies : <br> HTML, CSS, Node JS, Express JS, MongoDB </span>
 									</div>
 								</a>
 							</div>
 							<div class="col-md-6">
-								<a href="https://www.figma.com/proto/wcG1eL7ZhUkpWnBGQU2HsV/PearlHack-Round01?page-id=0%3A1&node-id=393-1888&scaling=scale-down&t=C5n4Aza015g1DKn5-1" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/post2.png); width: 600px; height: 300px;" target="_blank">
+								<a href="https://github.com/Ruma1013/Flask-NoteBook-App" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/A.png); width: 600px; height: 300px;" target="_blank">
 									<div class="overlay"></div>
 									<div class="text text-center">
-										<h3>Community Health Monitoring System</h3>
-										<span>Used Technologies : Figma, Photoshop</span>
+										<h3>Flask NoteBook Application</h3>
+										<span>Used Technologies : <br> Python, HTML, CSS, Bootstrap,MongoDB </span>
 									</div>
 								</a>
 							</div>
