--- a/elen-master/fashion.html
+++ b/elen-master/fashion.html
@@ -89,51 +89,26 @@
 								</a>
 							</div>
 							<div class="col-md-6">
-								<a href="https://www.figma.com/proto/xJY8B1CdCXvuzep2HOPiTY/UI-Trio-ROUND02?type=design&node-id=0-1&scaling=scale-down&starting-point-node-id=62%3A223&show-proto-sidebar=1" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/post5.png); width: 600px; height: 300px;" target="_blank">
+								<a href="https://github.com/Ruma1013/SnapStream" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/13.png); width: 600px; height: 300px;" target="_blank">
 									<div class="overlay"></div>
 									<div class="text text-center">
-										<h3>ECO Meter App</h3>
-										<span>Used Technologies : Figma</span>
+										<h3>SNAP STREAM</h3>
+										<span>Used Technologies : <br> React, Node JS, Express JS, MongoDB </span>
 									</div>
 								</a>
 							</div>
 							<div class="col-md-6">
-								<a href="https://www.figma.com/proto/AjxaD0tRc44LIYxpZQy76L/Mini-Project?page-id=27%3A2&node-id=54-36&viewport=744%2C328%2C0.26&t=KfvwLmJbTHR8X0WO-1&scaling=scale-down" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/post3.jpg); width: 600px; height: 300px;" target="_blank">
+								<a href="https://github.com/Ruma1013/My-Portfolio" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/15.jpg); width: 600px; height: 300px;" target="_blank">
 									<div class="overlay"></div>
 									<div class="text text-center">
-										<h3>Smart License Mobile App</h3>
-										<span>Used Technologies : Figma</span>
+										<h3>MY portfolio</h3>
+										<span>Used Technologies : HTML, CSS, Bootstrap</span>
 									</div>
 								</a>
 							</div>
-							<div class="col-md-6">
-								<a href="https://www.figma.com/design/AjxaD0tRc44LIYxpZQy76L/Mini-Project?node-id=606-141&t=yHNfsTLF6z8kdvzh-1
-								git - https://github.com/Ruma1013/Capstone" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/Post1.jpg); width: 600px; height: 300px;" target="_blank">
-									<div class="overlay"></div>
-									<div class="text text-center">
-										<h3>Smart License Web Application</h3>
-										<span>Used Technologies : Figma</span>
-									</div>
-								</a>
-							</div>
-							<div class="col-md-6">
-								<a href="#" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/post7.jpg); width: 600px; height: 300px;" target="_blank">
-									<div class="overlay"></div>
-									<div class="text text-center">
-										<h3>Work 01</h3>
-										<span>Technology</span>
-									</div>
-								</a>
-							</div>
-							<div class="col-md-6">
-								<a href="#" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/post2.jpg); width: 600px; height: 300px;" target="_blank">
-									<div class="overlay"></div>
-									<div class="text text-center">
-										<h3>Work 02</h3>
-										<span>Nature</span>
-									</div>
-								</a>
-							</div>
+
+
+
 						</div>
 						<div class="row no-gutters">
 							<!-- Repeat this structure for the other pairs of images -->
