--- a/elen-master/travel.html
+++ b/elen-master/travel.html
@@ -52,7 +52,7 @@
 					<li class="colorlib-active"><a href="index.html">Home</a></li>
 					<li><a href="travel.html">Skills</a></li>
 					<li><a href="photography.html"> UI Designs</a></li>
-					<li><a href="fashion.html">Projects</a></li>
+					<li><a href="fashion.html">Web Projects</a></li>
 					<li><a href="about.html">About</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
@@ -98,7 +98,7 @@
 			<div class="row justify-content-center pb-5">
 				<div class="col-md-12 heading-section text-center ftco-animate">
 					<h2 class="mb-4">My Skills</h2>
-					<p>Explore my key skills, from designing user-friendly interfaces to developing innovative applications. Discover how my expertise can bring your projects to life.</p>
+					<p>Explore my key skills, from designing user-friendly interfaces to developing innovative applications. Discover how my expertise can bring your Web Projects to life.</p>
 				</div>
 			</div>
 			<div class="row progress-circle mb-5">
@@ -396,7 +396,7 @@
 				  <div class="ftco-footer-widget mb-4 ml-md-4">
 					<h2 class="ftco-heading-2">Links</h2>
 					<ul class="list-unstyled categories">
-					  <li><a href="photography.html">Projects </a></li>
+					  <li><a href="photography.html">Web Projects </a></li>
 					  <li><a href="travel.html">Skills </a></li>
 					  <li><a href="about.html">About </a></li>
 					  <li><a href="contact.html">Contact </a></li>
