--- a/elen-master/fashion.html
+++ b/elen-master/fashion.html
@@ -38,7 +38,7 @@
 					<li class="colorlib-active"><a href="index.html">Home</a></li>
 					<li><a href="travel.html">Skills</a></li>
 					<li><a href="photography.html">UI Designs</a></li>
-					<li><a href="fashion.html">Projects</a></li>
+					<li><a href="fashion.html">Web Projects</a></li>
 					<li><a href="about.html">About</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
@@ -97,6 +97,17 @@
 									</div>
 								</a>
 							</div>
+
+							<div class="col-md-6">
+								<a href="https://github.com/Ruma1013/REVE-BRILLANT" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/16.png); width: 600px; height: 300px;" target="_blank">
+									<div class="overlay"></div>
+									<div class="text text-center">
+										<h3>REVE BRILLANT COFFEE SHOP WEBSITE</h3>
+										<span>Used Technologies : HTML, CSS, Bootstrap</span>
+									</div>
+								</a>
+							</div>
+
 							<div class="col-md-6">
 								<a href="https://github.com/Ruma1013/My-Portfolio" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/15.jpg); width: 600px; height: 300px;" target="_blank">
 									<div class="overlay"></div>
@@ -124,7 +135,7 @@
 						  <div class="ftco-footer-widget mb-4 ml-md-4">
 							<h2 class="ftco-heading-2">Links</h2>
 							<ul class="list-unstyled categories">
-							  <li><a href="photography.html">Projects </a></li>
+							  <li><a href="photography.html">Web Projects </a></li>
 							  <li><a href="travel.html">Skills </a></li>
 							  <li><a href="about.html">About </a></li>
 							  <li><a href="contact.html">Contact </a></li>
