--- a/elen-master/index.html
+++ b/elen-master/index.html
@@ -38,7 +38,7 @@
 					<li class="colorlib-active"><a href="index.html">Home</a></li>
 					<li><a href="travel.html">Skills</a></li>
 					<li><a href="photography.html">UI Designs</a></li>
-					<li><a href="fashion.html">Projects</a></li>
+					<li><a href="fashion.html">Web Projects</a></li>
 					<li><a href="about.html">About</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
@@ -77,7 +77,7 @@
             <div class="ftco-footer-widget mb-4 ml-md-4">
               <h2 class="ftco-heading-2">Links</h2>
               <ul class="list-unstyled categories">
-                <li><a href="photography.html">Projects </a></li>
+                <li><a href="photography.html">Web Projects </a></li>
                 <li><a href="travel.html">Skills </a></li>
                 <li><a href="about.html">About </a></li>
                 <li><a href="contact.html">Contact </a></li>
