--- a/elen-master/about.html
+++ b/elen-master/about.html
@@ -49,10 +49,10 @@
 			<div class="colorlib-footer">
 				
 				<ul>
-					<li><a href="#"><i class="icon-facebook"></i></a></li>
-					<li><a href="#"><i class="icon-twitter"></i></a></li>
-					<li><a href="#"><i class="icon-instagram"></i></a></li>
-					<li><a href="#"><i class="icon-linkedin"></i></a></li>
+          <li><a href="#"><i class="icon-facebook"></i></a></li>
+					<li><a href="rumandasenanayake@gmail.com"><i class="fab fa-google"></i></a></li>
+          <li><a href="https://github.com/Ruma1013"><i class="bi bi-github"></i></a></li>
+					<li><a href="https://www.linkedin.com/in/chamudi-senanayake-5637b8218"><i class="icon-linkedin"></i></a></li>
 				</ul>
 			</div>
 		</aside> <!-- END COLORLIB-ASIDE -->
@@ -61,7 +61,7 @@
 				<div class="overlay"></div>
 				<div class="js-fullheight d-flex justify-content-center align-items-center">
 					<div class="col-md-8 text text-center">
-						<div class="img mb-4" style="background-image: url(images/.jpg);"></div>
+						<div class="img mb-4" style="background-image: url(images/17.png);"></div>
 						<div class="desc">
 							<h2 class="subheading">Hello I'm</h2>
 							<h1 class="mb-4">Chamudi Senanayake</h1>
