--- a/elen-master/photography.html
+++ b/elen-master/photography.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.3/font/bootstrap-icons.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700" rel="stylesheet">
 
     <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
@@ -48,9 +50,9 @@
 				
 				<ul>
 					<li><a href="#"><i class="icon-facebook"></i></a></li>
-					<li><a href="#"><i class="icon-twitter"></i></a></li>
-					<li><a href="#"><i class="icon-instagram"></i></a></li>
-					<li><a href="#"><i class="icon-linkedin"></i></a></li>
+					<li><a href="rumandasenanayake@gmail.com"><i class="fab fa-google"></i></a></li>
+					<li><a href="https://github.com/Ruma1013"><i class="bi bi-github"></i></a></li>
+					<li><a href="https://www.linkedin.com/in/chamudi-senanayake-5637b8218"><i class="icon-linkedin"></i></a></li>
 				</ul>
 			</div>
 		</aside> <!-- END COLORLIB-ASIDE -->
