--- a/elen-master/travel.html
+++ b/elen-master/travel.html
@@ -69,7 +69,7 @@
 		</aside> <!-- END COLORLIB-ASIDE -->
 		<div id="colorlib-main">
 			<section class="home-slider js-fullheight owl-carousel">
-	      <div class="slider-item js-fullheight" style="background-image:url(images/bg_2.jpg);">
+	      <div class="slider-item js-fullheight" style="background-image:url(images/BG.jpg);">
 	      	<div class="overlay"></div>
 	        <div class="container-fluid">
 	          <div class="row no-gutters slider-text slider-text-2 js-fullheight align-items-center justify-content-center" data-scrollax-parent="true">
@@ -86,7 +86,7 @@
 	        <div class="container-fluid">
 	          <div class="row no-gutters slider-text slider-text-2 js-fullheight align-items-center justify-content-center" data-scrollax-parent="true">
 	          <div class="col-md-10 text-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
-	            <h1 class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Fullstack Web Development</h1>
+	            <h1 class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"> Web Development</h1>
 	            <p data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Building end-to-end web solutions for seamless online experiences..</p>
 	          </div>
 	        </div>
