--- a/elen-master/index.html
+++ b/elen-master/index.html
@@ -57,8 +57,8 @@
 			</div>
 		</aside> <!-- END COLORLIB-ASIDE -->
 		<div id="colorlib-main">
-			<div class="hero-wrap js-fullheight" style="background-image: url(images/bg_1.jpg);" data-stellar-background-ratio="0.5">
-				<div class="overlay"></div>
+			<div class="hero-wrap js-fullheight" style="background-color: white;" data-stellar-background-ratio="0.5">
+			
 				<div class="js-fullheight d-flex justify-content-center align-items-center">
 					<div class="col-md-8 text text-center">
 
@@ -66,7 +66,7 @@
 
 						<div class="desc">
 							<h2 class="subheading">Hello I'm</h2>
-							<h1 class="mb-4">Chamudi Senanayake</h1>
+							<h1 class="mb-4" style="color: Black; font-weight: 650; font-family:sans-serif"> Chamudi Senanayake</h1>
 							<p class="mb-4">Passionate about UI/UX engineering and web development, I thrive on creating intuitive designs and building robust web applications. Explore my portfolio to see how creativity and technical expertise come together to deliver exceptional user experiences.</p>
 							<p><a href="travel.html" class="btn-custom">More About Me <span class="ion-ios-arrow-forward"></span></a></p>
 						</div>
@@ -74,7 +74,7 @@
 				</div>
 			</div>
 
-    <footer class="ftco-footer ftco-bg-dark ftco-section">
+    <footer class="ftco-footer ftco-bg-dark ftco-section" style="background-color: black; color: white;">
       <div class="container px-md-5">
         <div class="row mb-5">
           <div class="col-md">
@@ -100,12 +100,12 @@
               </ul>
             </div>
           </div>
-          <div class="col-md">
+          <div class="col-md" >
             <div class="ftco-footer-widget mb-4">
             	<h2 class="ftco-heading-2">Have a Questions?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">no. 24/2, Epaladeniya, Giriulla</span></li>
+	                <li><span class="icon icon-map-marker"></span><span class="text" style="color: white;">Giriulla, Kurunegala, </br>SriLanka</span></li>
 	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+94 71 93 51 888</span></a></li>
 	                <li><a href=""><span class="icon icon-envelope"></span><span class="text">rumandasenanayake@gmail.com</span></a></li>
 					<li>
