--- a/elen-master/photography.html
+++ b/elen-master/photography.html
@@ -61,7 +61,46 @@
 				<section class="ftco-section-2">
 					<div class="photograhy">
 						<!-- Wrap pairs of images in a new div with class "row" -->
+						 
 						<div class="row no-gutters">
+							<div class="col-md-6">
+								<a href="https://www.figma.com/proto/AjxaD0tRc44LIYxpZQy76L/Mini-Project?page-id=27%3A2&node-id=54-36&viewport=744%2C328%2C0.26&t=KfvwLmJbTHR8X0WO-1&scaling=scale-down" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/post1.jpg); width: 600px; height: 300px;" target="_blank">
+									<div class="overlay"></div>
+									<div class="text text-center">
+										<h3>Smart License Mobile App</h3>
+										<span>Used Technologies : Figma</span>
+									</div>
+								</a>
+							</div>
+							<div class="col-md-6">
+								<a href="https://www.figma.com/proto/UqE5FRpwFI5AzXoBUB0yJi/Aquarium?node-id=1-4&t=zIBH15qiK1YSyoXV-1&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=1%3A4" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/Group\ 56.png); width: 600px; height: 300px;" target="_blank">
+									<div class="overlay"></div>
+									<div class="text text-center">
+										<h3>Wild Life Web Application</h3>
+										<span>Used Technologies : Figma</span>
+									</div>
+								</a>
+							</div>
+							<div class="col-md-6">
+								<a href="https://www.figma.com/design/WOqVxzKvHftq6HthcllfaF/Dogies?node-id=1-2&t=fqJeZXSfmWhVOQXb-1" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/19.png); width: 600px; height: 300px;" target="_blank">
+									<div class="overlay"></div>
+									<div class="text text-center">
+										<h3>Dog Adoption Web Page</h3>
+										<span>Used Technologies : Figma</span>
+									</div>
+								</a>
+							</div>
+							<div class="col-md-6">
+								<a href="https://www.figma.com/design/AjxaD0tRc44LIYxpZQy76L/Mini-Project?node-id=606-141&t=yHNfsTLF6z8kdvzh-1
+								git - https://github.com/Ruma1013/Capstone" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/Post3.jpg); width: 600px; height: 300px;" target="_blank">
+									<div class="overlay"></div>
+									<div class="text text-center">
+										<h3>Smart License Web Application</h3>
+										<span>Used Technologies : Figma</span>
+									</div>
+								</a>
+							</div>
+
 							<div class="col-md-6">
 								<a href="https://www.figma.com/design/yygDL2JAQB0EBfaECCXsba/VrituTrust?node-id=0-1&t=sDQxDLDYSGpgJE6J-1" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/post4.jpg); width: 600px; height: 300px; " target="_blank">
 									<div class="overlay"></div>
@@ -100,25 +139,7 @@
 									</div>
 								</a>
 							</div>
-							<div class="col-md-6">
-								<a href="https://www.figma.com/proto/AjxaD0tRc44LIYxpZQy76L/Mini-Project?page-id=27%3A2&node-id=54-36&viewport=744%2C328%2C0.26&t=KfvwLmJbTHR8X0WO-1&scaling=scale-down" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/post3.jpg); width: 600px; height: 300px;" target="_blank">
-									<div class="overlay"></div>
-									<div class="text text-center">
-										<h3>Smart License Mobile App</h3>
-										<span>Used Technologies : Figma</span>
-									</div>
-								</a>
-							</div>
-							<div class="col-md-6">
-								<a href="https://www.figma.com/design/AjxaD0tRc44LIYxpZQy76L/Mini-Project?node-id=606-141&t=yHNfsTLF6z8kdvzh-1
-								git - https://github.com/Ruma1013/Capstone" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/Post1.jpg); width: 600px; height: 300px;" target="_blank">
-									<div class="overlay"></div>
-									<div class="text text-center">
-										<h3>Smart License Web Application</h3>
-										<span>Used Technologies : Figma</span>
-									</div>
-								</a>
-							</div>
+
 							
 						</div>
 						<div class="row no-gutters">
