--- a/elen-master/fashion.html
+++ b/elen-master/fashion.html
@@ -63,7 +63,7 @@
 						<!-- Wrap pairs of images in a new div with class "row" -->
 						<div class="row no-gutters">
 							<div class="col-md-6">
-								<a href="https://github.com/Ruma1013/AutoHunt" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/post7.jpg); width: 600px; height: 300px; " target="_blank">
+								<a href="https://github.com/Ruma1013/AutoHunt" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/post7.jpg);  " target="_blank">
 									<div class="overlay"></div>
 									<div class="text text-center">
 										<h3>Auto Hunt Car Sale Web Application</h3>
@@ -73,7 +73,7 @@
 								</a>
 							</div>
 							<div class="col-md-6">
-								<a href="https://github.com/Ruma1013/Capstone" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/post3.jpg); width: 600px; height: 300px;" target="_blank">
+								<a href="https://github.com/Ruma1013/Capstone" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/post3.jpg); " target="_blank">
 									<div class="overlay"></div>
 									<div class="text text-center">
 										<h3>Smart License App</h3>
@@ -82,7 +82,7 @@
 								</a>
 							</div>
 							<div class="col-md-6">
-								<a href="https://github.com/Ruma1013/Flask-NoteBook-App" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/A.png); width: 600px; height: 300px;" target="_blank">
+								<a href="https://github.com/Ruma1013/Flask-NoteBook-App" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/A.png); " target="_blank">
 									<div class="overlay"></div>
 									<div class="text text-center">
 										<h3>Flask NoteBook Application</h3>
@@ -91,7 +91,7 @@
 								</a>
 							</div>
 							<div class="col-md-6">
-								<a href="https://github.com/Ruma1013/SnapStream" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/13.png); width: 600px; height: 300px;" target="_blank">
+								<a href="https://github.com/Ruma1013/SnapStream" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/13.png); " target="_blank">
 									<div class="overlay"></div>
 									<div class="text text-center">
 										<h3>SNAP STREAM</h3>
@@ -101,7 +101,7 @@
 							</div>
 
 							<div class="col-md-6">
-								<a href="https://github.com/Ruma1013/REVE-BRILLANT" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/16.png); width: 600px; height: 300px;" target="_blank">
+								<a href="https://github.com/Ruma1013/REVE-BRILLANT" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/16.png); " target="_blank">
 									<div class="overlay"></div>
 									<div class="text text-center">
 										<h3>REVE BRILLANT COFFEE SHOP WEBSITE</h3>
@@ -111,7 +111,8 @@
 							</div>
 
 							<div class="col-md-6">
-								<a href="https://github.com/Ruma1013/My-Portfolio" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/15.jpg); width: 600px; height: 300px;" target="_blank">
+								<a href="https://github.com/Ruma1013/My-Portfolio" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/15.jpg); 
+								" target="_blank">
 									<div class="overlay"></div>
 									<div class="text text-center">
 										<h3>MY portfolio</h3>
@@ -130,7 +131,7 @@
 				</section>
 
 			
-				<footer class="ftco-footer ftco-bg-dark ftco-section">
+				<footer class="ftco-footer ftco-bg-dark ftco-section" style="background-color: black; color: white;">
 					<div class="container px-md-5">
 					  <div class="row mb-5">
 						<div class="col-md">
@@ -156,12 +157,12 @@
 							</ul>
 						  </div>
 						</div>
-						<div class="col-md">
+						<div class="col-md" >
 						  <div class="ftco-footer-widget mb-4">
 							  <h2 class="ftco-heading-2">Have a Questions?</h2>
 							  <div class="block-23 mb-3">
 								<ul>
-								  <li><span class="icon icon-map-marker"></span><span class="text">no. 24/2, Epaladeniya, Giriulla</span></li>
+								  <li><span class="icon icon-map-marker"></span><span class="text" style="color: white;">Giriulla, Kurunegala, </br>SriLanka</span></li>
 								  <li><a href="#"><span class="icon icon-phone"></span><span class="text">+94 71 93 51 888</span></a></li>
 								  <li><a href=""><span class="icon icon-envelope"></span><span class="text">rumandasenanayake@gmail.com</span></a></li>
 								  <li>
