--- a/elen-master/contact.html
+++ b/elen-master/contact.html
@@ -106,7 +106,7 @@
 	      </div>
 	    </section>
 
-		<footer class="ftco-footer ftco-bg-dark ftco-section">
+		<footer class="ftco-footer ftco-bg-dark ftco-section" style="background-color: black; color: white;">
 			<div class="container px-md-5">
 			  <div class="row mb-5">
 				<div class="col-md">
@@ -132,12 +132,12 @@
 					</ul>
 				  </div>
 				</div>
-				<div class="col-md">
+				<div class="col-md" >
 				  <div class="ftco-footer-widget mb-4">
 					  <h2 class="ftco-heading-2">Have a Questions?</h2>
 					  <div class="block-23 mb-3">
 						<ul>
-						  <li><span class="icon icon-map-marker"></span><span class="text">no. 24/2, Epaladeniya, Giriulla</span></li>
+						  <li><span class="icon icon-map-marker"></span><span class="text" style="color: white;">Giriulla, Kurunegala, </br>SriLanka</span></li>
 						  <li><a href="#"><span class="icon icon-phone"></span><span class="text">+94 71 93 51 888</span></a></li>
 						  <li><a href=""><span class="icon icon-envelope"></span><span class="text">rumandasenanayake@gmail.com</span></a></li>
 						  <li>
