--- a/elen-master/Web.html
+++ b/elen-master/Web.html
@@ -32,9 +32,9 @@
     <nav id="colorlib-main-menu" role="navigation">
       <ul>
         <li class="colorlib-active"><a href="index.html">Home</a></li>
-        <li><a href="skills.html">Skills</a></li>
-        <li><a href="ui-designs.html">UI Designs</a></li>
-        <li><a href="web-projects.html">Web Projects</a></li>
+        <li><a href="Skill.html">Skills</a></li>
+        <li><a href="UIDesign.html">UI Designs</a></li>
+        <li><a href="Web.html">Web Projects</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
@@ -52,10 +52,10 @@
 
   <div id="colorlib-main">
     <section class="ftco-section-2">
-      <div class="photography">
+      <div class="UIDesign">
         <div class="row no-gutters">
           <div class="col-md-6">
-            <div class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/post7.jpg);">
+            <div class="UIDesign-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/post7.jpg);">
               <div class="overlay"></div>
               <div class="text text-center">
                 <h3>Auto Hunt Car Sale Web Application</h3>
@@ -68,7 +68,7 @@
             </div>
           </div>
           <div class="col-md-6">
-            <div class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/post3.jpg);">
+            <div class="UIDesign-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/post3.jpg);">
               <div class="overlay"></div>
               <div class="text text-center">
                 <h3>Smart License App</h3>
@@ -81,7 +81,7 @@
             </div>
           </div>
           <div class="col-md-6">
-            <div class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/A.png);">
+            <div class="UIDesign-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/A.png);">
               <div class="overlay"></div>
               <div class="text text-center">
                 <h3>Flask NoteBook Application</h3>
@@ -94,7 +94,7 @@
             </div>
           </div>
           <div class="col-md-6">
-            <div class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/13.png);">
+            <div class="UIDesign-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/13.png);">
               <div class="overlay"></div>
               <div class="text text-center">
                 <h3>SNAP STREAM</h3>
@@ -107,7 +107,7 @@
             </div>
           </div>
           <div class="col-md-6">
-            <div class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/Thumbnail_2.svg);">
+            <div class="UIDesign-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/Thumbnail_2.svg);">
               <div class="overlay"></div>
               <div class="text text-center">
                 <h3>Wildlife Web Application</h3>
@@ -120,7 +120,7 @@
             </div>
           </div>
           <div class="col-md-6">
-            <div class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/15.jpg);">
+            <div class="UIDesign-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/15.jpg);">
               <div class="overlay"></div>
               <div class="text text-center">
                 <h3>My Portfolio</h3>
@@ -133,7 +133,7 @@
             </div>
           </div>
           <div class="col-md-6">
-            <div class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/16.png);">
+            <div class="UIDesign-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/16.png);">
               <div class="overlay"></div>
               <div class="text text-center">
                 <h3>Reve Brillant Coffee Shop Website</h3>
