--- a/elen-master/index.html
+++ b/elen-master/index.html
@@ -38,9 +38,9 @@
 			<nav id="colorlib-main-menu" role="navigation">
 				<ul>
 					<li class="colorlib-active"><a href="index.html">Home</a></li>
-					<li><a href="travel.html">Skills</a></li>
-					<li><a href="photography.html">UI Designs</a></li>
-					<li><a href="fashion.html">Web Projects</a></li>
+					<li><a href="Skill.html">Skills</a></li>
+					<li><a href="UIDesign.html">UI Designs</a></li>
+					<li><a href="Web.html">Web Projects</a></li>
 					<li><a href="about.html">About</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
@@ -68,7 +68,7 @@
 							<h2 class="subheading">Hello I'm</h2>
 							<h1 class="mb-4" style="color: Black; font-weight: 650; font-family:sans-serif"> Chamudi Senanayake</h1>
 							<p class="mb-4">Passionate about UI/UX engineering and web development, I thrive on creating intuitive designs and building robust web applications. Explore my portfolio to see how creativity and technical expertise come together to deliver exceptional user experiences.</p>
-							<p><a href="travel.html" class="btn-custom">More About Me <span class="ion-ios-arrow-forward"></span></a></p>
+							<p><a href="Skill.html" class="btn-custom">More About Me <span class="ion-ios-arrow-forward"></span></a></p>
 						</div>
 					</div>
 				</div>
@@ -81,8 +81,8 @@
             <div class="ftco-footer-widget mb-4 ml-md-4">
               <h2 class="ftco-heading-2">Links</h2>
               <ul class="list-unstyled categories">
-                <li><a href="photography.html">Web Projects </a></li>
-                <li><a href="travel.html">Skills </a></li>
+                <li><a href="UIDesign.html">Web Projects </a></li>
+                <li><a href="Skill.html">Skills </a></li>
                 <li><a href="about.html">About </a></li>
                 <li><a href="contact.html">Contact </a></li>
               </ul>
