--- a/elen-master/contact.html
+++ b/elen-master/contact.html
@@ -38,9 +38,9 @@
 			<nav id="colorlib-main-menu" role="navigation">
 				<ul>
 					<li class="colorlib-active"><a href="index.html">Home</a></li>
-					<li><a href="travel.html">Skills</a></li>
-					<li><a href="photography.html">UI Designs</a></li>
-					<li><a href="fashion.html">Web Projects</a></li>
+					<li><a href="Skill.html">Skills</a></li>
+					<li><a href="UIDesign.html">UI Designs</a></li>
+					<li><a href="Web.html">Web Projects</a></li>
 					<li><a href="about.html">About</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
@@ -113,8 +113,8 @@
 				  <div class="ftco-footer-widget mb-4 ml-md-4">
 					<h2 class="ftco-heading-2">Links</h2>
 					<ul class="list-unstyled categories">
-					  <li><a href="photography.html">Web Projects </a></li>
-					  <li><a href="travel.html">Skills </a></li>
+					  <li><a href="UIDesign.html">Web Projects </a></li>
+					  <li><a href="Skill.html">Skills </a></li>
 					  <li><a href="about.html">About </a></li>
 					  <li><a href="contact.html">Contact </a></li>
 					</ul>
