--- a/elen-master/about.html
+++ b/elen-master/about.html
@@ -85,12 +85,7 @@
               <div class="img mb-4" style="background-image: url(images/17.png);"></div>
               <div class="desc">
                 <h2 class="subheading">Hello I'm</h2>
-                <h1 class="transition-text mb-4">
-                  <span>UI/UX Designer</span>
-                  <span>Frontend Developer</span>
-                  <span>Backend Developer</span>
-                  <span>Fullstack Developer</span>
-                </h1>
+                <h1 class="mb-4">Chamudi Senanayake</h1>
                 <p class="mb-4">Hello, I'm Chamudi Rumanda Senanayake, a 23-year-old undergraduate currently in my third year at Sabaragamuwa University of Sri Lanka, pursuing a degree in Computing & Information Systems. I reside in Giriulla, Kurunegala, Sri Lanka. I have a strong passion for UI/UX design and full-stack web development, and I'm dedicated to creating innovative and user-friendly web solutions.</p>
                 <ul class="ftco-social mt-3">
                   <li class="ftco-animate"><a href="https://github.com/Ruma1013"><span class="bi bi-github"></span></a></li>
