--- a/elen-master/Skill.html
+++ b/elen-master/Skill.html
@@ -144,7 +144,7 @@
                   <p>Bootstrap</p>
                 </div>
 		<div class="skill-item">
-                  <img src="images/icons/tailwind-css.svg" alt="Bootstrap">
+                  <img src="images/tailwind-css.svg" alt="Bootstrap">
                   <p>Tailwind CSS</p>
                 </div>
 
