--- a/elen-master/UIDesign.html
+++ b/elen-master/UIDesign.html
@@ -64,7 +64,7 @@
               
 
               <div class="col-md-6 image-container">
-                <a href="https://www.figma.com/proto/AjxaD0tRc44LIYxpZQy76L/Mini-Project?page-id=27%3A2&node-id=54-36&viewport=744%2C328%2C0.26&t=KfvwLmJbTHR8X0WO-1&scaling=scale-down" class="UIDesign-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/image6.png); height: 350px !important;" target="_blank">
+                <a href="https://www.figma.com/design/DJhJXBW8qvNjZDKCLQWCC1/Smart-Driving-License?node-id=1-1625&t=DN0ifJZAHtWosQz5-1" style="background-image: url(images/image6.png); height: 350px !important;" target="_blank">
                   <div class="overlay"></div>
                   <div class="text text-center">
                     <h3>Smart License Mobile App</h3>
