--- a/elen-master/UIDesign.html
+++ b/elen-master/UIDesign.html
@@ -62,7 +62,15 @@
             <!-- Wrap pairs of images in a new div with class "row" -->
             <div class="row no-gutters">
               
-
+                          <div class="col-md-6 image-container">
+                <a href="https://www.figma.com/design/DJhJXBW8qvNjZDKCLQWCC1/Smart-Driving-License?node-id=1-1625&t=DN0ifJZAHtWosQz5-1"  class="UIDesign-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/image6.png); height: 350px !important;" target="_blank">
+                  <div class="overlay"></div>
+                  <div class="text text-center">
+                    <h3>Smart License Mobile App</h3>
+                    <span>Used Technologies : Figma</span>
+                  </div>
+                </a>
+              </div>
 
 
               <div class="col-md-6 image-container">
@@ -75,15 +83,7 @@
                 </a>
               </div>
 
-                            <div class="col-md-6 image-container">
-                <a href="https://www.figma.com/design/DJhJXBW8qvNjZDKCLQWCC1/Smart-Driving-License?node-id=1-1625&t=DN0ifJZAHtWosQz5-1" style="background-image: url(images/image6.png); height: 350px !important;" target="_blank">
-                  <div class="overlay"></div>
-                  <div class="text text-center">
-                    <h3>Smart License Mobile App</h3>
-                    <span>Used Technologies : Figma</span>
-                  </div>
-                </a>
-              </div>
+
 
               
               <div class="col-md-6 image-container">
